<resources>
  <string name="app_name">PaymentApp</string>
  <string name="amount">Amount</string>
  <string name="action_save">SAVE</string>
  <string name="action_close">CLOSE</string>
  <string name="error_amount_exceed">The amount entered exceeds the maximum amount allowed for our payment methods (Min: %1$s)</string>
  <string name="error_amount_min">The amount entered does not reach the minimum amount allowed for our payment methods (Max: %1$s)</string>
  <string name="error_amount_empty">The amount cannot be empty</string>
  <string name="amount_info">AMOUNT INFO</string>
  <string name="bank_info">BANK INFO</string>
  <string name="card_info">CARD INFO</string>
  <string name="installment_info">INSTALLMENT INFO</string>
  <string name="action_dismiss">DISMISS</string>
</resources>
