<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  app:cardCornerRadius="22dp">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/amount"
      android:textAllCaps="true"
      android:textStyle="bold"
      android:textColor="@android:color/black"/>
    <TextView
      android:id="@+id/textAmount"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="@android:color/black"/>


    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/card_info"
      android:layout_marginTop="10dp"
      android:textStyle="bold"
      android:textColor="@android:color/black"/>

    <LinearLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"

      android:gravity="center_vertical">

      <ImageView
        android:id="@+id/imgLogoCard"
        android:layout_width="36dp"
        android:layout_height="36dp" />

      <TextView
        android:id="@+id/textCardName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@android:color/black"/>

    </LinearLayout>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/bank_info"
      android:layout_marginTop="10dp"
      android:textStyle="bold"
      android:textColor="@android:color/black"/>

    <LinearLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"

      android:gravity="center_vertical">

      <ImageView
        android:id="@+id/imgLogoBank"
        android:layout_width="36dp"
        android:layout_height="36dp" />

      <TextView
        android:id="@+id/textBankName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@android:color/black"/>

    </LinearLayout>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/installment_info"
      android:textAllCaps="true"
      android:textStyle="bold"
      android:textColor="@android:color/black"/>
    <TextView
      android:id="@+id/textInstallment"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="@android:color/black"/>

    <android.support.v7.widget.AppCompatButton
      android:id="@+id/btnDismiss"
      android:layout_gravity="end"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:background="@android:color/transparent"
      android:text="@string/action_dismiss"/>
  </LinearLayout>
</android.support.v7.widget.CardView>